<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bac2"
    tools:context=".MainActivity">

    <LinearLayout
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="65dp"
        android:layout_height="85dp"
        android:layout_gravity="center"

        android:layout_marginBottom="40dp"

        android:contentDescription="@string/app_logo"
        android:background="@color/white"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:inputType="text"

        />
    
    <EditText
        android:id="@+id/email"
        android:hint="@string/enter_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:inputType="textEmailAddress"

       />
    <EditText
        android:id="@+id/password"
        android:hint="@string/enter_paasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"

        android:inputType="numberPassword"

        />


    <TextView
        android:textStyle="bold"

        android:id="@+id/alrdy"
        android:text="Already have account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"

       />
         </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">
    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"

            android:text="@string/google" />

        <Button
        android:layout_width="120dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="@string/facebook"/>

    </LinearLayout>
    </LinearLayout>

</LinearLayout>





















