<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bac2"
    tools:context=".sign_in">

    <LinearLayout
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="65dp"
            android:layout_height="85dp"
            android:layout_gravity="center"

            android:layout_marginBottom="40dp"

            android:contentDescription="@string/app_logo"
            android:background="@color/white"
            android:src="@drawable/icon" />



        <EditText
            android:id="@+id/in_email"
            android:hint="@string/enter_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back"
            android:inputType="textEmailAddress"

            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/in_password"
            android:hint="@string/enter_paasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back"

            android:inputType="numberPassword"

            android:importantForAutofill="no" />


        <TextView
            android:textColor="@color/black"
            android:id="@+id/newuser"
            android:text="@string/new_user"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:padding="10dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/inGoogle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"

                android:text="@string/google" />

            <Button
                android:id="@+id/inFacebook"
                android:layout_width="120dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/facebook"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>